<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/clickAdd"
        android:layout_width="194dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:text="@string/clickButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/clickClear"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clickClear"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/clickButtonTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clickAdd"
        app:layout_constraintTop_toBottomOf="@+id/lastNumber" />

    <EditText
        android:id="@+id/firstNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/firstNumber"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/lastNumber"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNumber" />

    <TextView
        android:id="@+id/textWynik"
        android:layout_width="279dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickDel"
        app:layout_constraintVertical_bias="0.506" />

    <Button
        android:id="@+id/clickDel"
        android:layout_width="88dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="4dp"
        android:text="@string/clickDel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickAdd" />

    <Button
        android:id="@+id/clickMno"
        android:layout_width="81dp"
        android:layout_height="49dp"
        android:layout_marginStart="4dp"
        android:text="@string/clickMno"
        app:layout_constraintBaseline_toBaselineOf="@+id/clickDel"
        app:layout_constraintStart_toEndOf="@+id/clickDel" />

    <Button
        android:id="@+id/clickDziel"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:text="@string/clickDziel"
        app:layout_constraintBaseline_toBaselineOf="@+id/clickMno"
        app:layout_constraintStart_toEndOf="@+id/clickMno" />

</android.support.constraint.ConstraintLayout>